--- a/assets/less/base.less
+++ b/assets/less/base.less
@@ -401,8 +401,8 @@ iframe {
     
 }
 
-/* Testimonials section */
-.testimonials {
+/* Recommendations section */
+.recommendations {
     .item {
         margin-bottom: 30px;
         &:last-child {
