Added Tools & Frameworks section

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -522,6 +522,9 @@ iframe {
   .project-image {
     margin-bottom: 15px;
   }
+  .tools-frameworks-image {
+    margin-bottom: 15px;
+  }
 }
 /* Small devices (tablets, 768px and up) */
 /* Medium devices (desktops, 992px and up) */
