--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,4 +1,4 @@
-/*   
+/*
  * Template Name: Developer - Responsive Website Template for Developers
  * Version: 1.5
  * Author: Xiaoying Riley
@@ -10,7 +10,7 @@
 body {
   font-family: 'Lato', arial, sans-serif;
   color: #434343;
-  background: #DAE3E7;
+  background: #e4eaec;
   font-size: 16px;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
@@ -31,6 +31,42 @@ a {
   -moz-transition: all 0.4s ease-in-out;
   -ms-transition: all 0.4s ease-in-out;
   -o-transition: all 0.4s ease-in-out;
+}
+p {
+  margin: 0 0 15px;
+}
+.header-buttons .btn {
+  margin-left: 8px;
+}
+.tool-thumbnail {
+  padding: 15px;
+  position: relative;
+}
+.tool-thumbnail:hover::after {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(255, 255, 255, 0.5);
+  z-index: 1;
+}
+.tool-thumbnail:hover::before {
+  content: "Discover more";
+  position: absolute;
+  top: calc(50% - 16px);
+  left: calc(50% - 50px);
+  font-size: 12px;
+  border: 1px solid black;
+  background-color: white;
+  border-radius: 2px;
+  color: black;
+  z-index: 2;
+  padding: 6px;
+  width: 100px;
+  height: 32px;
+  text-align: center;
 }
 a:hover {
   text-decoration: underline;
@@ -65,6 +101,7 @@ a.btn-cta-primary,
   color: #fff;
   font-weight: 600;
   text-transform: uppercase;
+  margin-bottom: 10px;
 }
 a.btn-cta-primary:hover,
 .btn-cta-primary:hover {
@@ -79,6 +116,7 @@ a.btn-cta-secondary,
   color: #fff;
   font-weight: 600;
   text-transform: uppercase;
+  margin-bottom: 10px;
 }
 a.btn-cta-secondary:hover,
 .btn-cta-secondary:hover {
@@ -181,6 +219,9 @@ iframe {
   margin-bottom: 30px;
   color: #545e69;
   font-size: 24px;
+}
+.section .content .more-link:hover {
+  cursor: pointer;
 }
 .section .content .more-link .fa {
   margin-right: 5px;
@@ -344,6 +385,8 @@ iframe {
 .info .fa {
   margin-right: 15px;
   color: #ccd1d6;
+  font-size: 17px;
+  width: 13px;
 }
 .info .fa.fa-envelope-o {
   font-size: 14px;
@@ -509,7 +552,37 @@ iframe {
 /* ======= Thumbnail Override ======= */
 .thumbnail {
   padding: 0px;
+  margin: 10px 0;
+  transition: all 200ms ease-in;
 }
+.thumbnail:hover {
+  cursor: zoom-in;
+  transform: scale(1.1);
+}
+.project-icon {
+  padding: 0 30px;
+}
+.experience.section .item .title .text-wrapper {
+  width: 80%;
+  display: inline-block;
+}
+.experience.section .item .title .icon-wrapper {
+  float: right;
+  width: 20%;
+  padding: 0 5px;
+}
+.experience.section .item .title .icon-wrapper img {
+  width: 100%;
+  float: none;
+}
+h3.title {
+  border-top: 1px solid #efefef;
+  padding-top: 7px;
+}
+h3.title.no-border {
+  border: none;
+}
+
 /* Extra small devices (phones, less than 768px) */
 @media (max-width: 767px) {
   .header {
@@ -541,5 +614,17 @@ iframe {
 @media (min-width: 1400px) {
   .container {
     width: 1360px;
+  }
+}
+
+@media (max-width: 992px) {
+  .header-buttons {
+    float: initial !important;
+  }
+}
+
+@media (min-width: 992px), handheld {
+  .tool-thumbnail:hover::before {
+    display: none;
   }
 }
